@@ -235,6 +235,7 @@ Chronological list of authors
   - Jenna M. Swarthout Goddard
   2024
   - Aditya Keshari
+  - Philipp Stärk
 
 External code
 -------------
