@@ -1,0 +1,29 @@
+LAMMPS data file via write_data, version 24 Mar 2022, timestep = 500
+
+10 atoms
+1 atom types
+
+0 42.6 xlo xhi
+0 44.2712 ylo yhi
+-25.1 25.1 zlo zhi
+
+Masses
+
+1 12.011
+
+Pair Coeffs # lj/cut/coul/long/omp
+
+1 0.0663 3.5812
+
+Atoms # full
+
+1 2 1 -0.00706800004577013 2.84 8.17 -25 0 0 0
+2 2 1 0.004078816788554217 7.1 8.17 -25 0 0 0
+3 2 1 -0.005824512619752745 2.13 6.94 -25 0 0 0
+4 2 1 0.002812345167059992 6.39 6.94 -25 0 0 0
+5 2 1 -0.004070019151543417 2.84 5.71 -25 0 0 0
+6 2 1 0.004796116641855679 7.1 5.71 -25 0 0 0
+7 2 1 -0.003217742434809291 2.13 4.48 -25 0 0 0
+8 2 1 0.0008273956785370801 6.39 4.48 -25 0 0 0
+9 2 1 -0.0003942558636157474 2.84 3.25 -25 0 0 0
+10 2 1 0.001288716009147968 7.1 3.25 -25 0 0 0
