@@ -1,0 +1,19 @@
+ITEM: TIMESTEP
+0
+ITEM: NUMBER OF ATOMS
+10
+ITEM: BOX BOUNDS pp pp ff
+0.0000000000000000e+00 4.2600000000000001e+01
+0.0000000000000000e+00 4.4271200000000000e+01
+-2.5100000000000001e+01 2.5100000000000001e+01
+ITEM: ATOMS id x y z q p
+1 2.84 8.17 -25 0.00258855 1.1
+2 7.1 8.17 -25 6.91952e-05 1.2
+3 2.13 6.94 -25 0.0105548  1.1
+4 6.39 6.94 -25 0.00420319 1.2
+5 2.84 5.71 -25 0.00919172 1.1
+6 7.1 5.71 -25 0.00479777 1.2
+7 2.13 4.48 -25 0.000636864 1.1
+8 6.39 4.48 -25 0.00587125 1.2
+9 2.84 3.25 -25 -0.00218125 1.1
+10 7.1 3.25 -25 0.0068891 1.2
